fixed menu scrollbar bug

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -578,7 +578,7 @@
                 // project info****************************************
                 &__info {
                     position: absolute;
-                    bottom: -21%;
+                    bottom: -12%;
                     left: 0;
                     width: 100%;
                     height: 50%;
@@ -590,6 +590,15 @@
                     @include transition-ease;
 
                     
+                    @include slim-mobile{
+                        bottom: -13%;
+                    }
+                    @include large-mobile{
+                        bottom: -15%;
+                    }
+                    @include mini-tablet{
+                        bottom: -23%;
+                    }
                     @include tablet{
                         bottom: -15%;
                     }
@@ -619,7 +628,6 @@
                     .project-category {
                         padding-top: 1rem;
                         color: $primary-text-clr-3;
-                        font-size: 1.5rem;
                     }
                    
                 }
@@ -643,10 +651,11 @@
                         height: 30px;
                         width: 30px;
                         display: flex;
-                        border-radius: 5px;
+                        border-radius: 3px;
                         align-items: center;
                         justify-content: center;
                         z-index: 15;  
+                        box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 4px;
 
                         &:hover{
                             background-color: rgb(255, 124, 0);
